<resources>
    <string name="app_name">RPi</string>
    <string name="tempButton">Temperature</string>
    <string name="lightOn">ON</string>
    <string name="lightOff">OFF</string>
    <string name="btResult">Result</string>
    <string name="Button">Continue</string>
    <string name="BLUETOOTH">BLUETOOTH</string>
    <string name="gpio">GPIO on/off</string>
    <string name="read">Get Reading</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="_10">10</string>
    <string name="_11">11</string>
    <string name="_12">12</string>
    <string name="_14">14</string>
    <string name="_16">16</string>
    <string name="_17">17</string>
    <string name="_18">18</string>
    <string name="_19">19</string>
    <string name="_20">20</string>
    <string name="_21">21</string>
    <string name="_22">22</string>
    <string name="_23">23</string>
    <string name="_24">24</string>
    <string name="_25">25</string>
    <string name="_26">26</string>
    <string name="_15">15</string>
    <string name="_13">13</string>
    <string name="txtview">Turn on or off the GPIO Pins</string>
    <string name="enter_gpio_pin_number">Enter GPIO Pin Number</string>
    <string name="textvie">Readings</string>
    <string name="get_readings">Get Readings</string>
    <string name="reset_readings">Reset Readings</string>
    <string name="_2_on">2 On</string>
    <string name="exit">exit</string>
    <string name="_1">1</string>
    <string name="all_read">All Read</string>
    <string name="textview">TextView</string>
    <string name="hello_world">Hello World</string>
    <string name="hi">hi</string>
    <string name="gpio_1">GPIO 1</string>
    <string name="gpio_2">GPIO 2</string>
    <string name="gpio_3">GPIO 3</string>
    <string name="gpio_4">GPIO 4</string>
    <string name="gpio_5">GPIO 5</string>
    <string name="gpio_6">GPIO 6</string>
    <string name="gpio_7">GPIO 7</string>
    <string name="gpio_8">GPIO 8</string>
    <string name="gpio_9">GPIO 9</string>
    <string name="gpio_10">GPIO 10</string>
    <string name="gpio_11">GPIO 11</string>
    <string name="gpio_12">GPIO 12</string>
    <string name="gpio_15">GPIO 15</string>
    <string name="gpio_14">GPIO 14</string>
    <string name="gpio_13">GPIO 13</string>
    <string name="gpio_16">GPIO 16</string>
    <string name="gpio_17">GPIO 17</string>
    <string name="gpio_19">GPIO 19</string>
    <string name="gpio_18">GPIO 18</string>
    <string name="gpio_21">GPIO 21</string>
    <string name="gpio_20">GPIO 20</string>
    <string name="gpio_22">GPIO 22</string>
    <string name="gpio_23">GPIO 23</string>
    <string name="gpio_24">GPIO 24</string>
    <string name="gpio_26">GPIO 26</string>
    <string name="gpio_25">GPIO 25</string>
    <string name="gpio_pin_details">GPIO Pin Details</string>
    <string name="_0">0</string>
    <string name="buton">Button</string>
    <string name="display">Display</string>
    <string name="reset">reset</string>
</resources>
